--- a/src/components/inspirationGenerator/inspirationGenerator.css
+++ b/src/components/inspirationGenerator/inspirationGenerator.css
@@ -6,7 +6,7 @@
 .inspiration-generator {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
 }
 
